--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is your new Play application
-=================================
+Générateur 40 ans IRISA
+=======================
 
-This file will be packaged with your application, when using `activator dist`.
+
